--- a/package.json
+++ b/package.json
@@ -16,14 +16,14 @@
     "payload": "cross-env PAYLOAD_CONFIG_PATH=src/payload.config.ts payload"
   },
   "dependencies": {
-    "@payloadcms/bundler-webpack": "^1.0.0",
-    "@payloadcms/db-postgres": "^0.x",
+    "@payloadcms/bundler-webpack": "^1.0.6",
+    "@payloadcms/db-postgres": "^0.7.1",
     "@payloadcms/plugin-cloud": "^3.0.0",
     "@payloadcms/richtext-slate": "^1.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "express": "^4.19.2",
-    "payload": "^2.0.0"
+    "payload": "^2.12.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
