--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@payloadcms/bundler-webpack": "^1.0.6",
     "@payloadcms/db-postgres": "^0.7.1",
     "@payloadcms/plugin-cloud": "^3.0.0",
+    "@payloadcms/plugin-search": "^1.1.0",
     "@payloadcms/richtext-slate": "^1.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
